# msdfgen-binaries

./: .gitignore  CMakeLists.txt  README.md  release.sh  vcpkg.json
.claude/: settings.local.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
src/: msdfgen_c_api.cpp  msdfgen_c_api.h
